tests/evaluator/should_pass/builtin_run.csp
channel a, b, c

procTest1 = RUN({})

procTest2 = RUN({}) [] RUN({a,b,c})
