tests/evaluator/should_fail/prioritisepo_3.csp
external prioritisepo

channel a, b

procTest1 = prioritisepo(STOP, {}, {(a, b)}, {})
assert procTest1 :[deadlock free [F]]
